# XParser

./: .clang-format  .gitignore  CHANGES  README.md  WORKSPACE
example/: CMakeLists.txt  calendarExample.cpp
example/inc/examples/: BaseInterface.h
example/inc/examples/calendar/: Calendar.h  CalendarXParser.h  Weekday.h  WorkingTime.h
example/src/examples/calendar/: Calendar.cpp  CalendarXParser.cpp  Weekday.cpp  WorkingTime.cpp
lib/: BUILD  CMakeLists.txt
lib/inc/examples/: BaseInterface.h
lib/inc/examples/calendar/: Weekday.h
lib/inc/xparser/: ParserException.h  XmlParser.h
lib/src/examples/calendar/: Calendar.cpp  CalendarXParser.cpp  WorkingTime.cpp
lib/src/xparser/: XmlParser.cpp
main/: BUILD  calendarExample.cpp
test/: BUILD
test/etc/: calendar.xml
test/unittest/: XParser_unittest.cpp
